--- a/BaiTap/22211tt0690_nguyenducsang_w7/color_changes.html
+++ b/BaiTap/22211tt0690_nguyenducsang_w7/color_changes.html
@@ -9,12 +9,14 @@
 </head>
 <body>
    
-    <div class="ct1">
+   
+    <div class="ct1" style="height: 600px; width: 100%;border: 10px solid red;">
         <button type="button" onclick="blue()">Blue</button>
         <button type="button" onclick="red()">red</button>
         <button type="button" onclick="yellow()">yellow</button>
         <button type="button" onclick="rad_color()">Random Color</button>
     </div>
+ 
 
     <script src="./public/js/colorchanges.js"></script>
     <script src="./public/js/bootstrap.bundle.min.js"></script>
